issue #75: added controller test for VariableTransactionApi and FixedTransactionApi